--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,7 +34,7 @@
   }
 }
 
-@media (prefers-color-scheme: dark) {
+@media (prefers-color-scheme: light) {
   :root {
     --color-primary: 250 250 250;
     --color-contrast: 32 33 36;
@@ -175,4 +175,201 @@ shop-pay-button {
       @apply object-cover w-full aspect-[inherit];
     }
   }
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+.dropdown2 {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  /* right: 25px; */
+  top: 25px;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
+  z-index: 1;
+}
+.dropdown-content2 {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 0;
+  left: 9rem;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
+  z-index: 1;
+}
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content > div {
+  color: black;
+  padding: 20px 16px;
+  text-decoration: none;
+  display: block;
+}
+.dropdown-content2 a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  background-color: #f1f1f1;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown-content2 a:hover {
+  background-color: #f1f1f1;
+}
+/* .dropdown-content2:hover {background-color: #f1f1f1;} */
+.dropdown2:hover .dropdown-content2 {
+  display: block;
+}
+.dropbtn2 {
+  cursor: pointer;
+}
+.dropbtn2:hover .dropdown-content2 {
+  display: block;
+}
+.dropbtn2:hover {
+  background-color: #f1f1f1;
+}
+/* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
+.navtest * {
+  font-size: 1.5rem;
+}
+.navtest *:not(div):hover {
+  text-decoration: underline;
+}
+.footer_top_right button {
+  background: 0 0;
+  min-width: 209px;
+  font-size: 20px;
+  text-transform: uppercase;
+  padding: 15px 20px;
+  height: 63px;
+  background-color: #3a3a3a;
+  color: #fff;
+  border: 1px solid #000000;
+  display: inline-block;
+  text-align: center;
+  transition: all 0.25s;
+  cursor: pointer;
+  margin: 2rem;
+}
+
+.footer_top_right input {
+  font-family: Poppins, sans-serif;
+  color: #535353;
+  font-size: 19px;
+  font-weight: 300;
+  max-width: 580px;
+  height: 63px;
+  background-color: transparent;
+  border: 1px solid #7f7f7f;
+  letter-spacing: 1px;
+  margin: 2rem;
+  flex-basis: 15rem;
+  flex-grow: 9999;
+  border-radius: 2px 0 0 2px;
+  text-align: left;
+  line-height: 1.2;
+  padding: 10px 18px;
+  outline: none;
+  box-shadow: none;
+}
+
+.footer_top_left h3 {
+  color: #101010;
+  font-size: 22px;
+  font-weight: 900;
+  margin-bottom: 10px;
+  text-transform: uppercase;
+  position: relative;
+}
+
+.footer_top_left p {
+  max-width: 400px;
+  font-family: Poppins, sans-serif;
+  color: #252525;
+  font-size: 13px;
+  font-weight: 400;
+}
+.footer_top {
+  background-color: #d5cfc3;
+}
+.footer_middle {
+  background-color: #f6f6f6;
+  padding: 50px 0 40px;
+}
+.footer_middle_top {
+  display: flex;
+  padding-bottom: 50px;
+  padding-top: 0px;
+  padding-left: 50px;
+  padding-right: 50px;
+  max-width: 1380px;
+  margin: 0 auto;
+}
+.footer_middle_top_right {
+  width: 80%;
+  column-gap: 1rem;
+  margin-left: -3rem;
+  row-gap: 6rem;
+  margin-bottom: 0;
+  display: flex;
+  flex-wrap: wrap;
+  margin-bottom: 2rem;
+  margin-left: -0.5rem;
+  padding: 0;
+  list-style: none;
+}
+.footer_contact {
+  color: #333232;
+  font-family: Poppins, sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 15px !important;
+  margin-top: 7px;
+}
+.footer_li {
+  display: flex;
+  flex-wrap: wrap;
+  font-family: Poppins, sans-serif;
+  color: #0f0f0f;
+  font-size: 17px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.footer_middle_top_right_div {
+  padding: 0 50px 0 0;
+}
+.footer_middle_top_right_div_top {
+  font-size: 14px;
+  color: #333232;
+  font-family: Poppins, sans-serif;
+}
+.footer_middle_top_right_div li{
+  font-family: Poppins,sans-serif;
+    color: #333232;
+    text-transform: none;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 2rem;
 }
